--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-bootstrap": "^1.0.0-beta.14",
     "react-circular-progressbar": "^2.0.3",
     "react-dom": "^16.10.2",
+    "react-ios-switch": "^0.1.19",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "reactstrap": "^8.5.1",
